# ascend-op-plugin

./: .clang-format  .gitignore  OWNERS  README.md  SECURITYNOTE.md  doc_grouped_matmul.md  gencode.sh  ops_sync.py
ci/: build.sh  build_ops_ut.py  exec_ut.sh
codegen/: __init__.py  code_template.py  gen.py
codegen/templates/: OpInterface.cpp  _op_plugin_docs.py
op_plugin/: CMakeLists.txt
op_plugin/config/v1r11/: derivatives.yaml  npu_native_functions.yaml  op_plugin_functions.yaml
op_plugin/config/v2r0/: derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v2r1/: derivatives.yaml  npu_native_functions.yaml  op_plugin_functions.yaml
op_plugin/config/v2r2/: derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v2r3/: derivatives.yaml  op_plugin_functions.yaml
op_plugin/config/v2r4/: op_plugin_functions.yaml
op_plugin/ops/: OpApiInterface.h  OpInterface.cpp  OpInterface.h
op_plugin/ops/custom/: BmmV2KernelNpu.cpp  (+18 more)
op_plugin/utils/: AccumulateType.cpp  AccumulateType.h  AdvancedIndex.cpp  AdvancedIndex.h  KernelNpuOutputSize.cpp  KernelNpuOutputSize.h  OpAdapter.h  OpUtils.cpp  OpUtils.h  op_api_common.cpp  op_api_common.h  ops.cpp
plugin/ops/: OpInterface.h
test/: CMakeLists.txt  test_abs.cpp  test_add.cpp  unsupported_ops_info_base.yaml
test/test_base_ops/: test_aminmax.py  test_api_doc.py  test_col2im_backward.py  test_constant_pad_nd copy.py  test_reflection_pad3d_backward.py  test_replication_pad3d_backward.py
test/test_custom_ops/: test_dropout_add_layer_norm.py  test_dynamic_quant.py  test_group_norm_silu.py  test_inplace_mm_all_reduce_add_rms_norm.py  test_irfft.py  test_mm_all_reduce_add_rms_norm.py  test_npu_add_layer_norm.py  test_npu_anti_quant.py  test_npu_cauchy.py  test_npu_deep_norm_backward.py  test_npu_exponential.py  test_npu_ffn.py  test_npu_geometric.py  test_npu_grouped_matmul.py  test_npu_linspace.py  test_npu_quant_matmul.py  test_npu_quantize.py  test_npu_random.py  test_npu_rms_norm_backward.py  test_npu_silent_check.py  test_npu_swi_glu.py  test_npu_swi_glu_backward.py  test_npu_tome_merge.py  test_npu_transquantparam.py  test_repeat_interleave_backward.py  test_rfft.py
test/test_utils/: op_plugin_test.h
test/test_v2r1_ops/: test_npu_fft1d.py  unsupported_ops_info.yaml
test/test_v2r2_ops/: test__aminmax.py  unsupported_ops_info.yaml
(+1187 files in other folders)
